--- a/WhereToPlay/app/src/main/res/layout/activity_main.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_main.xml
@@ -40,27 +40,26 @@
                     android:layout_width="@dimen/width_0"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:gravity="center_horizontal"
+                    android:gravity="center"
                     android:onClick="doClick"
                     android:orientation="vertical"
-                    android:paddingTop="@dimen/padding_5">
+
+                    >
 
                     <ImageView
                         android:id="@+id/iv_main_tab_reserve"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_7"
-                        android:layout_marginBottom="@dimen/margin_7"
+                        android:layout_width="@dimen/width_20"
+                        android:layout_height="@dimen/height_20"
                         android:src="@drawable/reserve_book"/>
 
-                    <!--<TextView
+                    <TextView
                         android:id="@+id/tv_main_tab_reserve"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/height_20"
                         android:gravity="center"
                         android:text="@string/reserve"
-                        android:textColor="@color/text_black"
-                        android:textSize="@dimen/textsize_10"/>-->
+                        android:textColor="@color/reserve_unpress"
+                        android:textSize="@dimen/textsize_10"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -68,27 +67,26 @@
                     android:layout_width="@dimen/width_0"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:gravity="center_horizontal"
+                    android:gravity="center"
                     android:onClick="doClick"
                     android:orientation="vertical"
-                    android:paddingTop="@dimen/padding_5">
+
+                    >
 
                     <ImageView
                         android:id="@+id/iv_main_tab_pay"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_7"
-                        android:layout_marginBottom="@dimen/margin_7"
+                        android:layout_width="@dimen/width_20"
+                        android:layout_height="@dimen/height_20"
                         android:src="@drawable/reserve_pay"/>
 
-                   <!-- <TextView
+                    <TextView
                         android:id="@+id/tv_main_tab_pay"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/height_20"
                         android:gravity="center"
                         android:text="@string/pay"
-                        android:textColor="@color/text_black"
-                        android:textSize="@dimen/textsize_levelsmall"/>-->
+                        android:textColor="@color/reserve_unpress"
+                        android:textSize="@dimen/textsize_10"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -96,27 +94,26 @@
                     android:layout_width="@dimen/width_0"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:gravity="center_horizontal"
+                    android:gravity="center"
                     android:onClick="doClick"
                     android:orientation="vertical"
-                    android:paddingTop="@dimen/padding_5">
+
+                    >
 
                     <ImageView
                         android:id="@+id/iv_main_tab_discover"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_7"
-                        android:layout_marginBottom="@dimen/margin_7"
+                        android:layout_width="@dimen/width_20"
+                        android:layout_height="@dimen/height_20"
                         android:src="@drawable/discover"/>
 
-                    <!--<TextView
+                    <TextView
                         android:id="@+id/tv_main_tab_discover"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/height_20"
                         android:gravity="center"
                         android:text="@string/discover"
-                        android:textColor="@color/text_black"
-                        android:textSize="@dimen/textsize_levelsmall"/>-->
+                        android:textColor="@color/reserve_unpress"
+                        android:textSize="@dimen/textsize_10"/>
 
 
                 </LinearLayout>
@@ -126,26 +123,26 @@
                     android:layout_width="@dimen/width_0"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:gravity="center_horizontal"
+                    android:gravity="center"
                     android:onClick="doClick"
                     android:orientation="vertical"
-                    android:paddingTop="@dimen/padding_5">
+
+                    >
 
                     <ImageView
                         android:id="@+id/iv_main_tab_mine"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_7"
-                        android:layout_marginBottom="@dimen/margin_7"
+                        android:layout_width="@dimen/width_20"
+                        android:layout_height="@dimen/height_20"
                         android:src="@drawable/mine"/>
 
-                   <!-- <TextView
+                    <TextView
+                        android:id="@+id/tv_main_tab_mine"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/height_20"
                         android:gravity="center"
                         android:text="@string/discover"
-                        android:textColor="@color/text_black"
-                        android:textSize="@dimen/textsize_levelsmall"/>-->
+                        android:textColor="@color/reserve_unpress"
+                        android:textSize="@dimen/textsize_10"/>
 
                 </LinearLayout>
 
