--- a/WhereToPlay/app/src/main/res/layout/fragment_mine.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_mine.xml
@@ -19,126 +19,136 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <RelativeLayout
-            android:id="@+id/rl_mine_info"
+        <com.fanc.wheretoplay.view.MyScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/text_red"
-            android:onClick="@{click.onViewClick}"
-            android:paddingBottom="@dimen/padding_20"
-            android:paddingLeft="@dimen/padding_15"
-            android:paddingRight="@dimen/padding_20"
-            android:paddingTop="@dimen/width_0">
-
-            <com.fanc.wheretoplay.view.CircleImageView
-                android:id="@+id/civ_mine"
-                android:layout_width="@dimen/width_60"
-                android:layout_height="@dimen/height_60"
-                android:src="@drawable/sign_in_top"/>
-
-            <TextView
-                android:id="@+id/tv_mine_nickname"
-                android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/civ_mine"
-                android:layout_marginLeft="@dimen/margin_15"
-                android:layout_marginTop="@dimen/margin_2"
-                android:layout_toRightOf="@+id/civ_mine"
-                android:text="@string/nickname"
-                android:textColor="@color/text_white"
-                android:textSize="@dimen/menu_title_size"/>
+                android:orientation="vertical">
+                <RelativeLayout
+                    android:id="@+id/rl_mine_info"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/text_red"
+                    android:onClick="@{click.onViewClick}"
+                    android:paddingBottom="@dimen/padding_20"
+                    android:paddingLeft="@dimen/padding_15"
+                    android:paddingRight="@dimen/padding_20"
+                    android:paddingTop="@dimen/width_0">
 
-            <TextView
-                android:id="@+id/tv_mine_id"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/tv_mine_nickname"
-                android:layout_below="@+id/tv_mine_nickname"
-                android:layout_marginTop="@dimen/margin_10"
-                android:text="ID:10086"
-                android:textColor="@color/text_white"
-                android:textSize="@dimen/textsize_level2"/>
+                    <com.fanc.wheretoplay.view.CircleImageView
+                        android:id="@+id/civ_mine"
+                        android:layout_width="@dimen/width_60"
+                        android:layout_height="@dimen/height_60"
+                        android:src="@drawable/sign_in_top"/>
 
-            <TextView
-                android:id="@+id/tv_mine_integral"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/tv_mine_id"
-                android:layout_alignParentRight="true"
-                android:text="86分"
-                android:textColor="@color/text_white"
-                android:textSize="@dimen/textsize_level2"/>
+                    <TextView
+                        android:id="@+id/tv_mine_nickname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@+id/civ_mine"
+                        android:layout_marginLeft="@dimen/margin_15"
+                        android:layout_marginTop="@dimen/margin_2"
+                        android:layout_toRightOf="@+id/civ_mine"
+                        android:text="@string/nickname"
+                        android:textColor="@color/text_white"
+                        android:textSize="@dimen/menu_title_size"/>
 
-            <TextView
-                android:id="@+id/tv_mine_integral_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/tv_mine_id"
-                android:layout_toLeftOf="@+id/tv_mine_integral"
-                android:text="@string/integral_1"
-                android:textColor="@color/text_white"
-                android:textSize="@dimen/textsize_level2"/>
-        </RelativeLayout>
+                    <TextView
+                        android:id="@+id/tv_mine_id"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignLeft="@+id/tv_mine_nickname"
+                        android:layout_below="@+id/tv_mine_nickname"
+                        android:layout_marginTop="@dimen/margin_10"
+                        android:text="ID:10086"
+                        android:textColor="@color/text_white"
+                        android:textSize="@dimen/textsize_level2"/>
 
+                    <TextView
+                        android:id="@+id/tv_mine_integral"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBaseline="@+id/tv_mine_id"
+                        android:layout_alignParentRight="true"
+                        android:text="86分"
+                        android:textColor="@color/text_white"
+                        android:textSize="@dimen/textsize_level2"/>
 
-
-        <com.fanc.wheretoplay.view.ItemView
-            android:id="@+id/iv_mine_message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="@{click.onViewClick}"
-            android:layout_marginTop="@dimen/margin_10"/>
-
-        <com.fanc.wheretoplay.view.ItemView
-            android:id="@+id/iv_mine_wallet"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="@{click.onViewClick}"/>
-
-        <com.fanc.wheretoplay.view.ItemView
-            android:id="@+id/iv_mine_discount_coupon"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="@{click.onViewClick}"/>
-
-
-        <com.fanc.wheretoplay.view.ItemView
-            android:id="@+id/iv_mine_integral"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="@{click.onViewClick}"
-            android:layout_marginTop="@dimen/margin_10"/>
-
-        <com.fanc.wheretoplay.view.ItemView
-            android:id="@+id/iv_mine_order"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="@{click.onViewClick}"/>
-
-        <com.fanc.wheretoplay.view.ItemView
-            android:id="@+id/iv_mine_collection"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="@{click.onViewClick}"/>
+                    <TextView
+                        android:id="@+id/tv_mine_integral_1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBaseline="@+id/tv_mine_id"
+                        android:layout_toLeftOf="@+id/tv_mine_integral"
+                        android:text="@string/integral_1"
+                        android:textColor="@color/text_white"
+                        android:textSize="@dimen/textsize_level2"/>
+                </RelativeLayout>
 
 
-        <com.fanc.wheretoplay.view.ItemView
-            android:id="@+id/iv_mine_referral"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="@{click.onViewClick}"
-            android:layout_marginTop="@dimen/margin_10"/>
 
-        <com.fanc.wheretoplay.view.ItemView
-            android:id="@+id/iv_mine_drive"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="@{click.onViewClick}"/>
+                <com.fanc.wheretoplay.view.ItemView
+                    android:id="@+id/iv_mine_message"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:onClick="@{click.onViewClick}"
+                    android:layout_marginTop="@dimen/margin_10"/>
 
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/height_0"
-            android:layout_weight="1"/>
+                <com.fanc.wheretoplay.view.ItemView
+                    android:id="@+id/iv_mine_wallet"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:onClick="@{click.onViewClick}"/>
+
+                <com.fanc.wheretoplay.view.ItemView
+                    android:id="@+id/iv_mine_discount_coupon"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:onClick="@{click.onViewClick}"/>
+
+
+                <com.fanc.wheretoplay.view.ItemView
+                    android:id="@+id/iv_mine_integral"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:onClick="@{click.onViewClick}"
+                    android:layout_marginTop="@dimen/margin_10"/>
+
+                <com.fanc.wheretoplay.view.ItemView
+                    android:id="@+id/iv_mine_order"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:onClick="@{click.onViewClick}"/>
+
+                <com.fanc.wheretoplay.view.ItemView
+                    android:id="@+id/iv_mine_collection"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:onClick="@{click.onViewClick}"/>
+
+
+                <com.fanc.wheretoplay.view.ItemView
+                    android:id="@+id/iv_mine_referral"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:onClick="@{click.onViewClick}"
+                    android:layout_marginTop="@dimen/margin_10"/>
+
+                <com.fanc.wheretoplay.view.ItemView
+                    android:id="@+id/iv_mine_drive"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:onClick="@{click.onViewClick}"/>
+
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/height_0"
+                    android:layout_weight="1"/>
+            </LinearLayout>
+        </com.fanc.wheretoplay.view.MyScrollView>
+
 
     </LinearLayout>
 
