--- a/WhereToPlay/app/src/main/res/values/colors.xml
+++ b/WhereToPlay/app/src/main/res/values/colors.xml
@@ -146,6 +146,8 @@
     <!--reserve info-->
     <color name="reserve_info_title">#3A3A3A</color>
     <color name="reserve_info_unchecked">#3D3D3D</color>
+    <color name="reserve_unpress">#888888</color>
+
 
     <!--alter city-->
     <color name="gray">#8c8c8c</color>
